--- a/less/variables.less
+++ b/less/variables.less
@@ -1,1 +1,13 @@
-// variables
+// Color assignments 
+@font-color: @black;
+// @nav-bg: ;
+
+// Fonts
+// @font-roboto: 'Roboto', sans-serif;
+
+
+// Colors
+@white: #FFFFFF;
+@black: #000;
+
+
