--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.headerNavigation {
+  background: black;
+}
 .contact-form {
   display: block;
   margin: 0 auto;
