--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,96 +1,39 @@
-// navigation
-// .headerNavigation {
-//     background: lightblue;
-// }
-// .headerNavigation .header {
-//     display: flex;
-//     text-align: center;
-// }
-// .headerNavigation img {
-//     width: 50px;
-//     height: 50px;
-// }
-// .searchBar {
-//     font-size: 2.0rem;
-// }
-// .searchBarInput {
-//     border-radius: 1px;
-// }
-// .searchBarBtn {
-//     border-radius: 10px;
-// }
-
-// .headerNavigation {
-//     background: lightblue;
-//     width: 100%;
-//     display: flex;
-//     // flex-direction: column;
-//     // justify-content: space-evenly;
-//     // flex-wrap: wrap;
-//     // align-content: space-around;
-
-//     .header {
-//         // display: flex;
-//         // align-items: center;
-//         padding-top: 1%;
-//         // flex-flow: row wrap;
-
-//         h2 {
-//             padding-left: 1%;
-//         }
-//     }
-//     img {
-//         width: 50px;
-//         height: 50px;
-//         margin-left: 1%;
-//     }
-//     .searchBar {
-//         // display: flex;
-//         // // justify-content: flex-end;
-//         // // align-items: center;
-//         // align-items: flex-end;
-//         // text-align: center;
-//         font-size: 2.0rem;
-//         padding: 0 1% 1% 0;
-//         display: flex;
-//         justify-content: flex-end;
-
-//         .searchBarInput {
-//             border-radius: 1px;
-//         }
-//         .searchBarBtn {
-//             border-radius: 10px;
-//         }
-//     }
-// }
-
-.headerNavigation {
+.header-navigation {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    background: #2F2F2F;
+    padding: .75% 0 .75%;
 
     .header {
         display: flex;
-        flex-wrap: row wrap;
-        justify-content: flex-start;
         align-items: center;
-        margin-left: 1%;
-        padding: .5% 0;
+        padding: .5% 0 .5% 1%;
         
         img {
-            width: 50px;
-            height: 50px;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
         }
 
         h2 {
-            padding-left:1%;
-            font-size: 1.6rem;
+            white-space: nowrap;
+            padding-left: 6%;
+            font-size: 1.2rem;
+            color: @white;
         }
     }
 
-    .searchBar {
+    .search-bar {
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        margin-right: 1%;
+
+        .search-bar-input {
+            width: 200px;
+            height: 15px;
+            
+        }
     }
 }
