add font-family to less

--- a/less/variables.less
+++ b/less/variables.less
@@ -3,7 +3,10 @@
 // @nav-bg: ;
 
 // Fonts
-// @font-roboto: 'Roboto', sans-serif;
+// Cabin: Header, footer and buttons
+@font-cabin: 'Cabin', sans-serif; 
+// Standard page text
+@font-titillim : 'Titillium Web', sans-serif;
 
 
 // Colors
