--- a/less/index.less
+++ b/less/index.less
@@ -6,4 +6,5 @@
 @import 'navigation.less';
 @import 'footer.less';
 @import 'home-page.less'; 
+@import url('https://fonts.googleapis.com/css?family=Cabin|Titillium+Web');
 
