added cabin font to header and footer, created variables for font and hader-bg

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,8 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    background: #2F2F2F;
+    background: @header-bg;
+    font-family: @font-cabin;
     padding: .75% 0 .75%;
 
     .header {
