--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,5 @@
 // Color assignments 
 @font-color: @black;
-// @nav-bg: ;
 
 // Fonts
 // Cabin: Header, footer and buttons
@@ -12,5 +11,6 @@
 // Colors
 @white: #FFFFFF;
 @black: #000;
+@header-bg: #2F2F2F;
 
 
