--- a/css/index.css
+++ b/css/index.css
@@ -131,6 +131,7 @@ table {
   display: flex;
   justify-content: space-between;
   background: #2F2F2F;
+  font-family: 'Cabin', sans-serif;
   padding: 0.75% 0 0.75%;
 }
 .header-navigation .header {
