--- a/less/variables.less
+++ b/less/variables.less
@@ -6,6 +6,7 @@
 @font-cabin: 'Cabin', sans-serif; 
 // Standard page text
 @font-titillim : 'Titillium Web', sans-serif;
+@font-btn: @font-cabin;
 
 
 // Colors
