basic style to contact form

--- a/less/variables.less
+++ b/less/variables.less
@@ -5,7 +5,7 @@
 // Cabin: Header, footer and buttons
 @font-cabin: 'Cabin', sans-serif; 
 // Standard page text
-@font-titillim : 'Titillium Web', sans-serif;
+@font-titillium : 'Titillium Web', sans-serif;
 @font-btn: @font-cabin;
 
 
