--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,2 +1,37 @@
 // home-page
+html {
+    font-family: @font-titillium;
+}
 
+// Contact page
+.contact-form {
+    max-width: 600px;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 30px;
+
+    p {
+        font-size: 2rem;
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+        label {
+            font-size: 1.5rem;
+            padding: 10px 0;
+        }
+        input {
+            height: 35px;
+        }
+        textarea {
+            height: 200px;
+        }
+        #submit {
+            font-family: @font-cabin;
+            font-size: 1.4rem;
+            width: 40%;
+            margin: 0 auto;  
+            margin-top: 10px;
+        }
+    }
+}
