added footer styling to all pages

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,4 +1,43 @@
 // footer
-footer {
+.footer-content {
+    // text-align: center;
+    display: flex;
+    flex-direction: column;
     font-family: @font-cabin;
+    // text-decoration: none;
+    background: @header-bg;
+    color: @white;
+    .footer-content-list {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;;
+        .footer-content-item {
+            display: flex;
+            // align-content: space-between;
+            a {
+                text-decoration: none;
+                // color: @white;
+
+                // :hover {
+                //     color: lightgray;
+                // }
+                // :visited {
+                //     color: @white;
+                // }
+            }
+            a:hover {
+                color: yellow;
+            }
+            a:visited {
+                color: @white;
+            }
+        }
+    }
+
+    .copyright {
+        padding-top: 1%;
+        margin-bottom: 2%;
+        text-align: center;
+        // color: @white;
+    }
 }
