--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,30 @@ table {
 html {
   font-family: 'Titillium Web', sans-serif;
 }
+.container {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px 0;
+}
+.container h1 {
+  font-size: 1.5rem;
+  padding: 10px 0;
+}
+.container h3 {
+  font-size: 1.3rem;
+  padding: 10px 0;
+  font-style: italic;
+}
+.container p {
+  font-size: 1.2rem;
+  padding: 5px 0;
+  line-height: 1.5;
+}
+.container a {
+  text-decoration: none;
+  font-size: 1.2rem;
+}
 .contact-form {
   max-width: 600px;
   width: 100%;
