--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,32 @@ html {
     font-family: @font-titillium;
 }
 
+.container {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px 0;
+    h1 {
+        font-size: 1.5rem;
+        padding: 10px 0;
+    }
+    h3 {
+        font-size: 1.3rem;
+        padding: 10px 0;
+        font-style: italic;
+    }
+    p {
+        font-size: 1.2rem;
+        padding: 5px 0;
+        line-height: 1.5;
+    }
+    a {
+        text-decoration: none;
+        font-size: 1.2rem;
+    }
+}
+
+
 // Contact page
 .contact-form {
     max-width: 600px;
