set container height

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,11 +1,13 @@
 // home-page
-html {
+html, body {
     font-family: @font-titillium;
+    height: 100%;
 }
 
 .container {
     max-width: 1000px;
     width: 100%;
+    height: 80%;
     margin: 0 auto;
     padding: 20px 0;
     h1 {
