--- a/css/index.css
+++ b/css/index.css
@@ -189,12 +189,15 @@ table {
   margin-bottom: 2%;
   text-align: center;
 }
-html {
+html,
+body {
   font-family: 'Titillium Web', sans-serif;
+  height: 100%;
 }
 .container {
   max-width: 1000px;
   width: 100%;
+  height: 80%;
   margin: 0 auto;
   padding: 20px 0;
 }
