fixed hover and visited effects for pages links

--- a/css/index.css
+++ b/css/index.css
@@ -166,8 +166,10 @@ table {
   font-family: 'Cabin', sans-serif;
   background: #2F2F2F;
   color: #FFFFFF;
+  margin-top: 1%;
 }
 .footer-content .footer-content-list {
+  padding-top: 2%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -175,17 +177,18 @@ table {
 .footer-content .footer-content-list .footer-content-item {
   display: flex;
 }
+.footer-content .footer-content-list .footer-content-item :visited {
+  color: red;
+}
+.footer-content .footer-content-list .footer-content-item :hover {
+  color: blue;
+}
 .footer-content .footer-content-list .footer-content-item a {
   text-decoration: none;
-}
-.footer-content .footer-content-list .footer-content-item a:hover {
-  color: yellow;
-}
-.footer-content .footer-content-list .footer-content-item a:visited {
   color: #FFFFFF;
 }
 .footer-content .copyright {
-  padding-top: 1%;
+  padding-top: 2%;
   margin-bottom: 2%;
   text-align: center;
 }
