noticed problem with footer not staying at bottom of page

--- a/less/footer.less
+++ b/less/footer.less
@@ -6,6 +6,9 @@
     background: @header-bg;
     color: @white;
     margin-top: 1%;
+    // position: absolute;
+    // bottom: 0;
+    // width: 100%;
 
     .footer-content-list {
         padding-top: 2%;
