--- a/css/index.css
+++ b/css/index.css
@@ -200,7 +200,7 @@ body {
 .container {
   max-width: 1000px;
   width: 100%;
-  height: 75%;
+  min-height: 100%;
   margin: 0 auto;
   padding: 20px 0;
 }
