--- a/css/index.css
+++ b/css/index.css
@@ -197,6 +197,52 @@ body {
   font-family: 'Titillium Web', sans-serif;
   height: 100%;
 }
+.video-container .video-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  margin-top: 0;
+}
+.video-container .search-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  margin-top: 0;
+}
+.video-container .search-container .search-box {
+  width: 400px;
+  height: 150px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.video-container .search-container .search-box h1 {
+  color: #FFFFFF;
+  font-size: 2rem;
+  text-align: center;
+}
+.video-container .search-container .search-box .search-btn {
+  display: flex;
+  flex-direction: column;
+}
+.video-container .search-container .search-box .search-btn input {
+  height: 30px;
+}
+.video-container .search-container .search-box .search-btn button {
+  height: 35px;
+  margin-top: 5px;
+  font-family: 'Cabin', sans-serif;
+  font-size: 1.4rem;
+}
+.video-container .search-container .search-box p {
+  color: #FFFFFF;
+  font-size: 1.5rem;
+  text-align: center;
+}
 .container {
   max-width: 1000px;
   width: 100%;
