--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,60 @@ html, body {
     height: 100%;
 }
 
+.video-container {
+    .video-wrapper {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        margin-top: 0;
+    }
+    .search-container {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        margin-top: 0;
+        // display: flex;
+        // flex-direction: column;
+        
+        .search-box {
+            width: 400px;
+            height: 150px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            h1 {
+                color: @white;
+                font-size: 2rem;
+                text-align: center;
+            }
+            .search-btn {
+                display: flex;
+                flex-direction: column;
+                input {
+                    height: 30px;
+                }
+                button {
+                    height: 35px;
+                    margin-top: 5px;
+                    font-family: @font-cabin;
+                    font-size: 1.4rem;
+                }
+            }
+            p {
+                color: @white;
+                font-size: 1.5rem;
+                text-align: center;
+            }
+        }
+    }
+
+}
+
+
 .container {
     max-width: 1000px;
     width: 100%;
