--- a/css/index.css
+++ b/css/index.css
@@ -203,6 +203,11 @@ body {
   position: absolute;
   margin-top: 0;
 }
+.video-container .video-wrapper video {
+  height: 100%;
+  width: 100%;
+  background: pink;
+}
 .video-container .search-container {
   width: 100%;
   height: 100%;
@@ -242,6 +247,34 @@ body {
   color: #FFFFFF;
   font-size: 1.5rem;
   text-align: center;
+}
+.video-container .overlay-footer {
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  color: #FFFFFF;
+  background: red;
+}
+.video-container .overlay-footer .index-footer-content {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Cabin', sans-serif;
+}
+.video-container .overlay-footer .index-footer-content .index-footer-content-list {
+  padding-top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item {
+  display: flex;
+  font-size: 1.6rem;
+}
+.video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item a {
+  text-decoration: none;
+}
+.video-container .overlay-footer .index-footer-content .copyright {
+  display: none;
 }
 .container {
   max-width: 1000px;
