--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,8 +12,8 @@ html, body {
         margin-top: 0;
 
         video {
-            height: 100%;
-            width: 100%;
+            // height: 100%;
+            // width: 100%;
             background: pink;
             // padding: 0;
             // margin: 0;
