--- a/less/home-page.less
+++ b/less/home-page.less
@@ -39,18 +39,26 @@ html, body {
             transform: translate(-50%, -50%);
             h1 {
                 color: @white;
-                font-size: 2rem;
+                font-size: 3rem;
                 text-align: center;
+                padding-bottom: 15px;
             }
             .search-btn {
                 display: flex;
                 flex-direction: column;
                 input {
                     height: 30px;
+                    font-size: 1rem;
+                    padding-left: 10px;
+                }
+                input::placeholder {
+                    color: gray;
+                    font-size: 1rem;
+                    padding: 10px 0 0 10px;
                 }
                 button {
                     height: 35px;
-                    margin-top: 5px;
+                    margin-top: 15px;
                     font-family: @font-cabin;
                     font-size: 1.4rem;
                 }
@@ -59,6 +67,7 @@ html, body {
                 color: @white;
                 font-size: 1.5rem;
                 text-align: center;
+                padding-top: 15px;
             }
         }
     }
