--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,7 +14,7 @@ html, body {
         video {
             // height: 100%;
             // width: 100%;
-            background: pink;
+            // background: pink;
             // padding: 0;
             // margin: 0;
         }
@@ -76,7 +76,7 @@ html, body {
         bottom: 0%;
         width: 100%;
         color: @white;
-        background: red;
+        // background: red;
 
         .index-footer-content {
             display: flex;
@@ -95,6 +95,14 @@ html, body {
 
                     a {
                         text-decoration: none;
+                        color: @white;
+                        padding-bottom: 5px;
+                    }
+                    a:hover {
+                        font-size: 1.7rem;
+                    }
+                    a:visited {
+                        color: @white;
                     }
                 }
             }
