--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,9 @@ table {
   margin-bottom: 0.75%;
   text-align: center;
 }
+* {
+  box-sizing: border-box;
+}
 html,
 body {
   font-family: 'Titillium Web', sans-serif;
@@ -290,7 +293,7 @@ body {
 .container {
   max-width: 1000px;
   width: 100%;
-  min-height: 100%;
+  min-height: 80%;
   margin: 0 auto;
   padding: 20px 0;
 }
@@ -341,6 +344,45 @@ body {
   width: 40%;
   margin: 0 auto;
   margin-top: 10px;
+}
+.container.about {
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 600px) {
+  .container.about {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.container.about .developer {
+  width: 48%;
+  background-color: #e8e8e8;
+}
+.container.about .developer .avatar {
+  height: 300px;
+  width: 100%;
+}
+.container.about .developer .avatar img {
+  max-height: 250px;
+  max-width: 250px;
+  height: 40%;
+  width: 40%;
+  position: absolute;
+  margin: 20px 0 0 20px;
+}
+.container.about .developer .devInfo {
+  width: 100%;
+  padding: 0 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.container.about .developer .devInfo .user-name {
+  font-style: italic;
+}
+.container.about .developer .devBio {
+  width: 100%;
+  padding: 15px;
 }
 @font-face {
   font-family: 'Cabin';
