--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,8 @@
 // home-page
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     font-family: @font-titillium;
     height: 100%;
@@ -120,7 +124,7 @@ html, body {
     max-width: 1000px;
     width: 100%;
     
-    min-height: 100%;
+    min-height: 80%;
     margin: 0 auto;
     padding: 20px 0;
     h1 {
@@ -177,3 +181,51 @@ html, body {
     }
 }
 
+.container.about {
+    // background-color: red;
+
+    display: flex;
+    justify-content: space-between; 
+    @media only screen and (max-width: 600px) {
+        display: flex;
+        flex-direction: column;
+        // width: 100%;
+        // .developer {
+        //     width: 100%;
+        // }
+    }
+    
+    .developer {
+        width: 48%;
+        background-color: #e8e8e8;
+
+        .avatar {
+            // background-color: beige;
+            height: 300px;
+            width: 100%;
+            img {
+                max-height: 250px;
+                max-width: 250px;
+                height: 40%;
+                width: 40%;
+                position: absolute;  
+                margin: 20px 0 0 20px;
+            }
+        }
+        .devInfo {
+            // background-color: lightsalmon;
+            width: 100%;
+            padding: 0 15px;
+            display: flex;
+            justify-content: space-between;
+            .user-name {
+                font-style: italic;
+            }
+        }
+        .devBio {
+            // background-color: lightgray;
+            width: 100%;
+            padding: 15px;
+        }
+    }
+}
