minor changes to navbar

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -198,6 +198,7 @@ html, body {
     .developer {
         width: 48%;
         background-color: #e8e8e8;
+        border-radius: 5px;
 
         .avatar {
             // background-color: beige;
