--- a/css/index.css
+++ b/css/index.css
@@ -157,8 +157,15 @@ table {
   margin-right: 1%;
 }
 .header-navigation .search-bar .search-bar-input {
-  width: 200px;
-  height: 15px;
+  width: 225px;
+  height: 25px;
+  font-size: 16px;
+  padding-left: 4px;
+}
+.header-navigation .search-bar button {
+  font-size: 16px;
+  height: 26px;
+  width: 150px;
 }
 .footer-content {
   display: flex;
@@ -358,6 +365,7 @@ body {
 .container.about .developer {
   width: 48%;
   background-color: #e8e8e8;
+  border-radius: 5px;
 }
 .container.about .developer .avatar {
   height: 300px;
