--- a/less/navigation.less
+++ b/less/navigation.less
@@ -32,9 +32,15 @@
         margin-right: 1%;
 
         .search-bar-input {
-            width: 200px;
-            height: 15px;
-            
+            width: 225px;
+            height: 25px;
+            font-size: 16px;
+            padding-left: 4px;
+        }
+        button {
+            font-size: 16px;
+            height: 26px;
+            width: 150px;
         }
     }
 }
