--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,15 +6,19 @@ html, body {
 
 .video-container {
     .video-wrapper {
-        width: 100%;
-        height: 100%;
+        // width: 100%;
+        // height: 100%;
         position: absolute;
         margin-top: 0;
+        margin-bottom: 0;
+        
 
-        video {
-            height: 100%;
-            width: 100%;
-            background: pink;
+        .video {
+            position: fixed;
+            max-height: auto;
+            // height: 100%;
+            // width: 100%;
+            // background: pink;
             // padding: 0;
             // margin: 0;
         }
@@ -63,16 +67,24 @@ html, body {
         }
     }
     .overlay-footer {
-        position: absolute;
-        bottom: 0%;
+        position: fixed;
         width: 100%;
         color: @white;
-        background: red;
+        // background: red;
+        // position:absolute;
+        bottom: 0;
+        // left: 0;
 
         .index-footer-content {
+            // top: 1000px;
             display: flex;
             flex-direction: column;
             font-family: @font-cabin;
+            
+            // position: absolute;
+            // bottom: 0px;
+            // background-position: 50% 50%;
+            
 
             .index-footer-content-list {
                 padding-top: 0;
@@ -83,9 +95,11 @@ html, body {
                 .index-footer-content-item {
                     display: flex;
                     font-size: 1.6rem;
+                    padding-bottom: 2%;
 
                     a {
                         text-decoration: none;
+                        color: @white;
                     }
                 }
             }
