--- a/less/home-page.less
+++ b/less/home-page.less
@@ -220,7 +220,7 @@ html, body {
             display: flex;
             justify-content: space-between;
             .user-name {
-                font-style: italic;
+                color: red;
             }
         }
         .devBio {
