--- a/css/index.css
+++ b/css/index.css
@@ -208,9 +208,10 @@ body {
   height: 100%;
 }
 .video-container .video-wrapper {
-  position: fixed;
+  width: 100%;
+  height: 100%;
+  position: absolute;
   margin-top: 0;
-  margin-bottom: 0;
 }
 .video-container .search-container {
   width: 100%;
@@ -262,11 +263,10 @@ body {
   padding-top: 15px;
 }
 .video-container .overlay-footer {
-  position: fixed;
+  position: absolute;
+  bottom: 0%;
   width: 100%;
   color: #FFFFFF;
-  position: absolute;
-  bottom: 0;
 }
 .video-container .overlay-footer .index-footer-content {
   display: flex;
@@ -282,98 +282,96 @@ body {
 .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item {
   display: flex;
   font-size: 1.6rem;
-  padding-bottom: 2%;
-}
-.video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
-  color: #FFFFFF;
-}
-.video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :hover {
-  color: lightsalmon;
-  font-size: 1.7rem;
 }
 .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item a {
   text-decoration: none;
   color: #FFFFFF;
   padding-bottom: 5px;
 }
+.video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item a:hover {
+  font-size: 1.7rem;
+}
+.video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item a:visited {
+  color: #FFFFFF;
+}
 .video-container .overlay-footer .index-footer-content .copyright {
   display: none;
 }
-.video-container .container {
+.container {
   max-width: 1000px;
   width: 100%;
   min-height: 80%;
   margin: 0 auto;
   padding: 20px 0;
 }
-.video-container .container h1 {
+.container h1 {
   font-size: 1.5rem;
   padding: 10px 0;
 }
-.video-container .container h3 {
+.container h3 {
   font-size: 1.3rem;
   padding: 10px 0;
   font-style: italic;
 }
-.video-container .container p {
+.container p {
   font-size: 1.2rem;
   padding: 5px 0;
   line-height: 1.5;
 }
-.video-container .container a {
+.container a {
   text-decoration: none;
   font-size: 1.2rem;
 }
-.video-container .contact-form {
+.contact-form {
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
   margin-top: 30px;
 }
-.video-container .contact-form p {
+.contact-form p {
   font-size: 2rem;
 }
-.video-container .contact-form form {
+.contact-form form {
   display: flex;
   flex-direction: column;
 }
-.video-container .contact-form form label {
+.contact-form form label {
   font-size: 1.5rem;
   padding: 10px 0;
 }
-.video-container .contact-form form input {
+.contact-form form input {
   height: 35px;
 }
-.video-container .contact-form form textarea {
+.contact-form form textarea {
   height: 200px;
 }
-.video-container .contact-form form #submit {
+.contact-form form #submit {
   font-family: 'Cabin', sans-serif;
   font-size: 1.4rem;
   width: 40%;
   margin: 0 auto;
   margin-top: 10px;
 }
-.video-container .container.about {
+.container.about {
   display: flex;
   justify-content: space-between;
 }
 @media only screen and (max-width: 600px) {
-  .video-container .container.about {
+  .container.about {
     display: flex;
     flex-direction: column;
   }
 }
-.video-container .container.about .developer {
+.container.about .developer {
   width: 48%;
   background-color: #e8e8e8;
   border-radius: 5px;
 }
-.video-container .container.about .developer .avatar {
+.container.about .developer .avatar {
   height: 300px;
   width: 100%;
 }
-.video-container .container.about .developer .avatar img {
+.container.about .developer .avatar img {
   max-height: 250px;
   max-width: 250px;
   height: 40%;
@@ -381,18 +379,16 @@ body {
   position: absolute;
   margin: 20px 0 0 20px;
 }
-.video-container .container.about .developer .devInfo {
+.container.about .developer .devInfo {
   width: 100%;
   padding: 0 15px;
   display: flex;
   justify-content: space-between;
 }
-
-.video-container .container.about .developer .devInfo .user-name {
-  color: red;
+.container.about .developer .devInfo .user-name {
+  font-style: italic;
 }
-
-.video-container .container.about .developer .devBio {
+.container.about .developer .devBio {
   width: 100%;
   padding: 15px;
 }
