--- a/css/index.css
+++ b/css/index.css
@@ -387,11 +387,9 @@ body {
   display: flex;
   justify-content: space-between;
 }
-
 .video-container .container.about .developer .devInfo .user-name {
-  color: red;
+  font-style: italic;
 }
-
 .video-container .container.about .developer .devBio {
   width: 100%;
   padding: 15px;
