--- a/less/home-page.less
+++ b/less/home-page.less
@@ -223,7 +223,7 @@ html, body {
             display: flex;
             justify-content: space-between;
             .user-name {
-                color: red;
+                font-style: italic;
             }
         }
         .devBio {
