hide main / show results with js and css

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -234,6 +234,37 @@ html, body {
     }
 }
 
+.show {
+    opacity: 1;
+}
 
+.hide {
+    opacity: 0;
+}
 
- //hello
+.search-results {
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    .user-data {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .avatar img {
+        width: 300px;
+        height: 300px;
+
+    }
+    p {
+        font-size: 1.4rem;
+    }
+}
+
+.search-again {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+}
