--- a/css/index.css
+++ b/css/index.css
@@ -393,6 +393,35 @@ body {
   width: 100%;
   padding: 15px;
 }
+.show {
+  opacity: 1;
+}
+.hide {
+  opacity: 0;
+}
+.search-results {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+}
+.search-results .user-data {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.search-results .avatar img {
+  width: 300px;
+  height: 300px;
+}
+.search-results p {
+  font-size: 1.4rem;
+}
+.search-again {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+}
 @font-face {
   font-family: 'Cabin';
   font-style: normal;
