--- a/css/index.css
+++ b/css/index.css
@@ -408,14 +408,14 @@ body {
 .search-results .user-data {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .search-results .avatar img {
   width: 300px;
   height: 300px;
 }
 .search-results p {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
 }
 .search-again {
   max-width: 1000px;
