--- a/less/home-page.less
+++ b/less/home-page.less
@@ -250,16 +250,15 @@ html, body {
     .user-data {
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-between;
     }
 
     .avatar img {
         width: 300px;
         height: 300px;
-
     }
     p {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
     }
 }
 
