--- a/less/home-page.less
+++ b/less/home-page.less
@@ -245,17 +245,20 @@ html, body {
 .search-results {
     max-width: 800px;
     width: 100%;
+    background-color: #e8e8e8;
     margin: 0 auto;
     display: flex;
     .user-data {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        margin: 20px;
     }
 
     .avatar img {
         width: 300px;
         height: 300px;
+        margin: 20px;
     }
     p {
         font-size: 1.5rem;
@@ -266,4 +269,9 @@ html, body {
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
+    p {
+        font-size: 1.4rem;
+        margin: 40px 0;
+        text-align: center;
+    }
 }
