--- a/less/home-page.less
+++ b/less/home-page.less
@@ -248,6 +248,8 @@ html, body {
     background-color: #e8e8e8;
     margin: 0 auto;
     display: flex;
+    position: relative;
+    // z-index: 1;
     .user-data {
         display: flex;
         flex-direction: column;
@@ -269,9 +271,14 @@ html, body {
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
+    position: relative;
     p {
         font-size: 1.4rem;
         margin: 40px 0;
         text-align: center;
     }
+}
+
+.footer-content.index {
+    position: relative;
 }
