style results and add cta button

--- a/css/index.css
+++ b/css/index.css
@@ -426,11 +426,19 @@ body {
   width: 100%;
   margin: 0 auto;
   position: relative;
+  text-align: center;
 }
 .search-again p {
   font-size: 1.4rem;
   margin: 40px 0;
+}
+.search-again button {
   text-align: center;
+  padding: 15px;
+  font-size: 1.3rem;
+  background-color: green;
+  border-radius: 5px;
+  color: #FFFFFF;
 }
 .footer-content.index {
   position: relative;
