--- a/less/home-page.less
+++ b/less/home-page.less
@@ -272,10 +272,18 @@ html, body {
     width: 100%;
     margin: 0 auto;
     position: relative;
+    text-align: center;
     p {
         font-size: 1.4rem;
         margin: 40px 0;
+    }
+    button {
         text-align: center;
+        padding: 15px;
+        font-size: 1.3rem;
+        background-color: green;
+        border-radius: 5px;
+        color: @white;
     }
 }
 
