--- a/less/index.less
+++ b/less/index.less
@@ -7,4 +7,6 @@
 @import 'footer.less';
 @import 'home-page.less'; 
 @import url('https://fonts.googleapis.com/css?family=Cabin|Titillium+Web');
+@import 'popup.less';
+
 
