--- a/less/home-page.less
+++ b/less/home-page.less
@@ -148,6 +148,16 @@ html, body {
         text-decoration: none;
         font-size: 1.2rem;
     }
+    .signup, .login {
+        text-align: center;
+        padding-top: 35px;
+        :hover {
+            color: seagreen;
+        }
+        a {
+            color: lightseagreen;
+        }
+    }
 }
 
 
