change a and :hover for text links

--- a/css/index.css
+++ b/css/index.css
@@ -319,22 +319,18 @@ body {
   padding: 5px 0;
   line-height: 1.5;
 }
+.container :hover {
+  color: seagreen;
+}
 .container a {
   text-decoration: none;
   font-size: 1.2rem;
+  color: lightseagreen;
 }
 .container .signup,
 .container .login {
   text-align: center;
   padding-top: 35px;
-}
-.container .signup :hover,
-.container .login :hover {
-  color: seagreen;
-}
-.container .signup a,
-.container .login a {
-  color: lightseagreen;
 }
 .contact-form {
   max-width: 600px;
