fix link color issue

--- a/css/index.css
+++ b/css/index.css
@@ -207,6 +207,13 @@ body {
   font-family: 'Titillium Web', sans-serif;
   height: 100%;
 }
+a.url:hover {
+  color: seagreen;
+}
+a.url {
+  color: lightseagreen;
+  text-decoration: none;
+}
 .video-container .video-wrapper {
   width: 100%;
   height: 100%;
@@ -319,18 +326,22 @@ body {
   padding: 5px 0;
   line-height: 1.5;
 }
-.container :hover {
-  color: seagreen;
-}
 .container a {
   text-decoration: none;
   font-size: 1.2rem;
-  color: lightseagreen;
 }
 .container .signup,
 .container .login {
   text-align: center;
   padding-top: 35px;
+}
+.container .signup :hover,
+.container .login :hover {
+  color: seagreen;
+}
+.container .signup a,
+.container .login a {
+  color: lightseagreen;
 }
 .contact-form {
   max-width: 600px;
