--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,7 @@ table {
   display: flex;
   align-items: center;
   padding: 0.5% 0 0.5% 1%;
+  text-decoration: none;
 }
 .header-navigation .header img {
   width: 32px;
