--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,6 +10,7 @@
         display: flex;
         align-items: center;
         padding: .5% 0 .5% 1%;
+        text-decoration: none;
         
         img {
             width: 32px;
