--- a/css/index.css
+++ b/css/index.css
@@ -164,9 +164,14 @@ table {
   padding-left: 4px;
 }
 .header-navigation .search-bar button {
+  text-decoration: none;
   font-size: 16px;
   height: 26px;
   width: 150px;
+}
+.header-navigation .search-bar button a {
+  text-decoration: none;
+  color: black;
 }
 .footer-content {
   display: flex;
