--- a/less/navigation.less
+++ b/less/navigation.less
@@ -11,7 +11,7 @@
         align-items: center;
         padding: .5% 0 .5% 1%;
         text-decoration: none;
-        
+
         img {
             width: 32px;
             height: 32px;
@@ -39,9 +39,15 @@
             padding-left: 4px;
         }
         button {
+            text-decoration: none;
             font-size: 16px;
             height: 26px;
             width: 150px;
+        }
+
+        button a {
+            text-decoration: none;
+            color: black;
         }
     }
 }
