updated footer at phone size

--- a/less/footer.less
+++ b/less/footer.less
@@ -9,12 +9,21 @@
     // position: absolute;
     // bottom: 0;
     // width: 100%;
+    
+    @media @phone {
+        width: 100%;
+        padding: 2% 0;
+    }
 
     .footer-content-list {
         padding-top: 0.75%;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;;
+        justify-content: space-around;
+
+        @media @phone {
+            padding-bottom: 2%;
+        }
 
         .footer-content-item {
             display: flex;
@@ -32,6 +41,7 @@
             }
         }
     }
+    
 
     .copyright { 
         padding-top: 0.75%;
