--- a/css/index.css
+++ b/css/index.css
@@ -169,6 +169,12 @@ table {
   height: 26px;
   width: 150px;
 }
+@media (max-width: 500px) {
+  .header-navigation .search-bar button {
+    width: 50%;
+    font-size: 10px;
+  }
+}
 .header-navigation .search-bar button a {
   text-decoration: none;
   color: black;
@@ -181,11 +187,22 @@ table {
   color: #FFFFFF;
   margin-top: 1%;
 }
+@media (max-width: 500px) {
+  .footer-content {
+    width: 100%;
+    padding: 2% 0;
+  }
+}
 .footer-content .footer-content-list {
   padding-top: 0.75%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+@media (max-width: 500px) {
+  .footer-content .footer-content-list {
+    padding-bottom: 2%;
+  }
 }
 .footer-content .footer-content-list .footer-content-item {
   display: flex;
@@ -226,6 +243,11 @@ a.url {
   position: absolute;
   margin-top: 0;
 }
+@media (max-width: 500px) {
+  .video-container .video-wrapper video {
+    display: none;
+  }
+}
 .video-container .search-container {
   width: 100%;
   height: 100%;
@@ -248,6 +270,11 @@ a.url {
   font-size: 3rem;
   text-align: center;
   padding-bottom: 15px;
+}
+@media (max-width: 500px) {
+  .video-container .search-container .search-box h1 {
+    color: black;
+  }
 }
 .video-container .search-container .search-box .search-btn {
   display: flex;
@@ -274,6 +301,11 @@ a.url {
   font-size: 1.5rem;
   text-align: center;
   padding-top: 15px;
+}
+@media (max-width: 500px) {
+  .video-container .search-container .search-box p {
+    color: black;
+  }
 }
 .video-container .overlay-footer {
   position: absolute;
