--- a/less/navigation.less
+++ b/less/navigation.less
@@ -43,6 +43,12 @@
             font-size: 16px;
             height: 26px;
             width: 150px;
+
+            @media @phone {
+                width: 50%;
+                font-size: 10px;
+            }
+            
         }
 
         button a {
