--- a/css/index.css
+++ b/css/index.css
@@ -244,6 +244,11 @@ a.url {
   margin-top: 0;
 }
 @media (max-width: 500px) {
+  .video-container .video-wrapper {
+    background: #F3EDED;
+  }
+}
+@media (max-width: 500px) {
   .video-container .video-wrapper video {
     display: none;
   }
@@ -253,6 +258,14 @@ a.url {
   height: 100%;
   position: absolute;
   margin-top: 0;
+}
+@media (max-width: 500px) {
+  .video-container .search-container {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    padding-top: 250px;
+  }
 }
 .video-container .search-container .search-box {
   width: 400px;
@@ -273,7 +286,11 @@ a.url {
 }
 @media (max-width: 500px) {
   .video-container .search-container .search-box h1 {
-    color: black;
+    color: #000;
+  }
+  .video-container .search-container .search-box h1 span::before {
+    content: '\A';
+    white-space: pre;
   }
 }
 .video-container .search-container .search-box .search-btn {
@@ -304,7 +321,7 @@ a.url {
 }
 @media (max-width: 500px) {
   .video-container .search-container .search-box p {
-    color: black;
+    color: #000;
   }
 }
 .video-container .overlay-footer {
@@ -313,10 +330,20 @@ a.url {
   width: 100%;
   color: #FFFFFF;
 }
+@media (max-width: 500px) {
+  .video-container .overlay-footer {
+    color: #000;
+  }
+}
 .video-container .overlay-footer .index-footer-content {
   display: flex;
   flex-direction: column;
   font-family: 'Cabin', sans-serif;
+}
+@media (max-width: 500px) {
+  .video-container .overlay-footer .index-footer-content {
+    color: #000;
+  }
 }
 .video-container .overlay-footer .index-footer-content .index-footer-content-list {
   padding-top: 0;
@@ -324,12 +351,32 @@ a.url {
   flex-direction: row;
   justify-content: space-around;
 }
+@media (max-width: 500px) {
+  .video-container .overlay-footer .index-footer-content .index-footer-content-list {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item {
   display: flex;
   font-size: 1.6rem;
 }
+@media (max-width: 500px) {
+  .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item {
+    display: block;
+    padding: 1.5%;
+    text-align: center;
+    border-top: 1px solid #000;
+    color: #000;
+  }
+}
 .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
   color: #FFFFFF;
+}
+@media (max-width: 500px) {
+  .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
+    color: #000;
+  }
 }
 .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :hover {
   color: lightsalmon;
@@ -339,6 +386,11 @@ a.url {
   text-decoration: none;
   color: #FFFFFF;
   padding-bottom: 5px;
+}
+@media (max-width: 500px) {
+  .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item a {
+    color: black;
+  }
 }
 .video-container .overlay-footer .index-footer-content .copyright {
   display: none;
