--- a/less/home-page.less
+++ b/less/home-page.less
@@ -22,6 +22,9 @@ a.url {
         height: 100%;
         position: absolute;
         margin-top: 0;
+        @media @phone {
+            background: #F3EDED;
+        }
 
         video {
             // height: 100%;
@@ -40,8 +43,14 @@ a.url {
         height: 100%;
         position: absolute;
         margin-top: 0;
-        // display: flex;
-        // flex-direction: column;
+
+        @media @phone {
+            position: relative;
+            display: inline-block;
+            text-align: center;
+            padding-top: 250px;
+           
+        }
         
         .search-box {
             width: 400px;
@@ -61,7 +70,11 @@ a.url {
                 padding-bottom: 15px;
 
                 @media @phone {
-                    color: black;
+                    color: @black;
+                    span::before {
+                        content: '\A';
+                        white-space: pre;
+                    }
                 }
             }
             .search-btn {
@@ -91,7 +104,7 @@ a.url {
                 padding-top: 15px;
 
                 @media @phone {
-                    color: black;
+                    color: @black;
                 }
             }
         }
@@ -103,10 +116,18 @@ a.url {
         color: @white;
         // background: red;
 
+        @media @phone {
+            color: @black;
+        }
+
         .index-footer-content {
             display: flex;
             flex-direction: column;
             font-family: @font-cabin;
+
+            @media @phone {
+                color: @black;
+            }
 
             .index-footer-content-list {
                 padding-top: 0;
@@ -114,12 +135,31 @@ a.url {
                 flex-direction: row;
                 justify-content: space-around;
 
+                @media @phone {
+                    display: flex;
+                    flex-direction: column;
+                    // color: black;
+                }
+
                 .index-footer-content-item {
                     display: flex;
                     font-size: 1.6rem;
 
+                    @media @phone {
+                        display: block;
+                        color: @black;
+                        padding: 1.5%;
+                        text-align: center;
+                        border-top: 1px solid @black;
+                        color: @black;
+                    }
+
                     :visited {
                         color: @white;
+
+                        @media @phone {
+                            color: @black;
+                        }
                     }
                     :hover {
                         color: lightsalmon;
@@ -131,6 +171,10 @@ a.url {
                         text-decoration: none;
                         color: @white;
                         padding-bottom: 5px;
+
+                        @media @phone {
+                            color: black;
+                        }
                     }
                     
                 }
