set all buttons and input/submit to cursor pointer

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,13 @@
     box-sizing: border-box;
 }
 
+button {
+    cursor: pointer;
+}
+input[type="submit"] {
+    cursor: pointer;
+}
+
 html, body {
     font-family: @font-titillium;
     height: 100%;
