--- a/css/index.css
+++ b/css/index.css
@@ -225,6 +225,12 @@ table {
 * {
   box-sizing: border-box;
 }
+button {
+  cursor: pointer;
+}
+input[type="submit"] {
+  cursor: pointer;
+}
 html,
 body {
   font-family: 'Titillium Web', sans-serif;
