working to fix media queries

--- a/less/footer.less
+++ b/less/footer.less
@@ -24,7 +24,9 @@
         @media @phone {
             padding-bottom: 2%;
         }
-
+        @media @break {
+            padding: 2% 0;
+        }
         .footer-content-item {
             display: flex;
 
