--- a/css/index.css
+++ b/css/index.css
@@ -204,6 +204,11 @@ table {
     padding-bottom: 2%;
   }
 }
+@media (max-width: 600px) {
+  .footer-content .footer-content-list {
+    padding: 2% 0;
+  }
+}
 .footer-content .footer-content-list .footer-content-item {
   display: flex;
 }
@@ -237,17 +242,17 @@ a.url {
   color: lightseagreen;
   text-decoration: none;
 }
+@media (max-width: 500px) {
+  .video-container {
+    background: #F3EDED;
+    height: auto;
+  }
+}
 .video-container .video-wrapper {
   width: 100%;
   height: 100%;
   position: absolute;
   margin-top: 0;
-}
-@media (max-width: 500px) {
-  .video-container .video-wrapper {
-    background: #F3EDED;
-    margin: 0 auto;
-  }
 }
 @media (max-width: 500px) {
   .video-container .video-wrapper video {
@@ -266,6 +271,7 @@ a.url {
     display: inline-block;
     text-align: center;
     padding-top: 250px;
+    width: 100%;
   }
 }
 .video-container .search-container .search-box {
@@ -278,6 +284,11 @@ a.url {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+@media (max-width: 500px) {
+  .video-container .search-container .search-box {
+    width: 100%;
+  }
 }
 .video-container .search-container .search-box h1 {
   color: #FFFFFF;
@@ -333,7 +344,7 @@ a.url {
 }
 @media (max-width: 500px) {
   .video-container .overlay-footer {
-    color: #000;
+    position: relative;
   }
 }
 .video-container .overlay-footer .index-footer-content {
@@ -343,7 +354,7 @@ a.url {
 }
 @media (max-width: 500px) {
   .video-container .overlay-footer .index-footer-content {
-    color: #000;
+    margin-top: 25%;
   }
 }
 .video-container .overlay-footer .index-footer-content .index-footer-content-list {
@@ -366,15 +377,20 @@ a.url {
 }
 @media (max-width: 500px) {
   .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item {
-    display: block;
     padding: 1.5%;
-    text-align: center;
     border-top: 1px solid #000;
     color: #000;
+    display: block;
+    text-align: center;
   }
 }
 .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
   color: #FFFFFF;
+}
+@media (max-width: 800px) {
+  .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
+    color: #000;
+  }
 }
 @media (max-width: 500px) {
   .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
@@ -395,9 +411,14 @@ a.url {
   color: #FFFFFF;
   padding-bottom: 5px;
 }
+@media (max-width: 800px) {
+  .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item a {
+    color: #000;
+  }
+}
 @media (max-width: 500px) {
   .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item a {
-    color: black;
+    color: #000;
   }
 }
 .video-container .overlay-footer .index-footer-content .copyright {
