--- a/less/home-page.less
+++ b/less/home-page.less
@@ -17,15 +17,22 @@ a.url {
 }
 
 .video-container {
+    @media @phone {
+        background: #F3EDED;
+        height: auto;
+        // overflow: auto;
+    }
+
     .video-wrapper {
         width: 100%;
         height: 100%;
         position: absolute;
         margin-top: 0;
-        @media @phone {
-            background: #F3EDED;
-            margin: 0 auto;
-        }
+        // @media @phone {
+        //     background: #F3EDED;
+        //     // // margin: 0 auto;
+        //     // height: 100%;
+        // }
 
         video {
             // height: 100%;
@@ -50,6 +57,7 @@ a.url {
             display: inline-block;
             text-align: center;
             padding-top: 250px;
+            width: 100%;
            
         }
         
@@ -63,6 +71,10 @@ a.url {
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
+
+            @media @phone {
+                width: 100%;
+            }
 
             h1 {
                 color: @white;
@@ -115,10 +127,9 @@ a.url {
         bottom: 0%;
         width: 100%;
         color: @white;
-        // background: red;
 
         @media @phone {
-            color: @black;
+            position: relative;
         }
 
         .index-footer-content {
@@ -127,8 +138,7 @@ a.url {
             font-family: @font-cabin;
 
             @media @phone {
-                color: @black;
-                // display: block;
+                margin-top: 25%;
             }
 
             .index-footer-content-list {
@@ -141,8 +151,8 @@ a.url {
                     width: 100%;
                     display: flex;
                     flex-direction: column;
-                    // display: block;
-                    // color: black;
+                    // justify-content: center;
+                    // align-content: center;
                 }
 
                 .index-footer-content-item {
@@ -151,16 +161,21 @@ a.url {
                     align-content: center;
 
                     @media @phone {
-                        display: block;
                         color: @black;
                         padding: 1.5%;
-                        text-align: center;
                         border-top: 1px solid @black;
                         color: @black;
+                        display: block;
+                        text-align: center;
+                        // align-content: center;
                     }
 
                     :visited {
                         color: @white;
+
+                        @media @tablet {
+                            color: @black;
+                        }
 
                         @media @phone {
                             color: @black;
@@ -181,11 +196,12 @@ a.url {
                         color: @white;
                         padding-bottom: 5px;
 
+                        @media @tablet {
+                            color: @black;
+                        }
+
                         @media @phone {
-                            color: black;
-                            // text-align: center;
-                            // display: block;
-                            // text-align: center;
+                            color: @black;
 
                         }
                     }
@@ -358,6 +374,7 @@ a.url {
     display: flex;
     position: relative;
     // z-index: 1;
+
     .user-data {
         display: flex;
         flex-direction: column;
