--- a/less/popup.less
+++ b/less/popup.less
@@ -13,6 +13,13 @@
             height: 350px;
             overflow: auto; /* Enable scroll if needed */
 
+            @media @tablet {
+              // background: black;
+              // width: 500px;
+              // height: 250px;
+              width: 100%;
+            }
+
             p {
                 color: black
             }
@@ -24,7 +31,8 @@
             margin: auto;
             padding: 20px;
             border: 1px solid #888;
-            width: 80%;
+            width: 100%;
+            height: auto;
           }
           
           // close button
