added actual content to the popup fixed the placement of popup

--- a/css/index.css
+++ b/css/index.css
@@ -625,15 +625,10 @@ a.url {
   /* Location of the box */
   left: 0;
   top: 0;
-  width: 750px;
+  width: auto;
   height: 350px;
   overflow: auto;
   /* Enable scroll if needed */
-}
-@media (max-width: 800px) {
-  .video-container .search-container .popup {
-    width: 100%;
-  }
 }
 .video-container .search-container .popup p {
   color: black;
@@ -643,8 +638,12 @@ a.url {
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 100%;
+  width: 75%;
   height: auto;
+}
+@media (max-width: 1000px) {
+}
+@media (max-width: 500px) {
 }
 .video-container .search-container .close {
   color: #aaaaaa;
