--- a/less/variables.less
+++ b/less/variables.less
@@ -18,4 +18,5 @@
 @phone: ~"(max-width: 500px)";
 @tablet: ~"(max-width: 800px)";
 @break: ~"(max-width: 600px)";
+@break2: ~"(max-width: 1000px)";
 
