added other breaks to adjust styling when changing the screen size manually

--- a/css/index.css
+++ b/css/index.css
@@ -332,6 +332,11 @@ a.url {
   text-align: center;
   padding-top: 15px;
 }
+@media (max-width: 725px) {
+  .video-container .search-container .search-box p {
+    color: #000;
+  }
+}
 @media (max-width: 500px) {
   .video-container .search-container .search-box p {
     color: #000;
@@ -388,6 +393,16 @@ a.url {
 .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
   color: #FFFFFF;
 }
+@media (max-width: 1100px) {
+  .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
+    color: #000;
+  }
+}
+@media (max-width: 725px) {
+  .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
+    color: #000;
+  }
+}
 @media (max-width: 800px) {
   .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item :visited {
     color: #000;
@@ -411,6 +426,11 @@ a.url {
   text-decoration: none;
   color: #FFFFFF;
   padding-bottom: 5px;
+}
+@media (max-width: 725px) {
+  .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item a {
+    color: #000;
+  }
 }
 @media (max-width: 800px) {
   .video-container .overlay-footer .index-footer-content .index-footer-content-list .index-footer-content-item a {
@@ -641,7 +661,7 @@ a.url {
   width: 75%;
   height: auto;
 }
-@media (max-width: 1000px) {
+@media (max-width: 725px) {
 }
 @media (max-width: 500px) {
 }
