--- a/less/home-page.less
+++ b/less/home-page.less
@@ -308,6 +308,7 @@ a.url {
             width: 100%;
             padding: 0 15px;
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
             .user-name {
                 font-style: italic;
