--- a/less/home-page.less
+++ b/less/home-page.less
@@ -92,6 +92,7 @@ a.url {
 
                 @media @phone {
                     color: @black;
+                    font-size: 2.4rem;
                     span::before {
                         content: '\A';
                         white-space: pre;
@@ -399,7 +400,12 @@ a.url {
     margin: 0 auto;
     display: flex;
     position: relative;
-    // z-index: 1;
+
+    @media @phone {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
     .user-data {
         display: flex;
