--- a/less/home-page.less
+++ b/less/home-page.less
@@ -27,7 +27,7 @@ a.url {
 .video-container {
     @media @phone {
         background: #F3EDED;
-        min-height: 100%;
+        min-height: 100%0;
         // overflow: auto;
     }
 
@@ -389,6 +389,7 @@ a.url {
 
 .hide {
     opacity: 0;
+    display: none;
 }
 
 // SEARCH RESULTS
